--- a/Java/libGDX/Lessons/android/AndroidManifest.xml
+++ b/Java/libGDX/Lessons/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.geekbrains.stargame" >
+    package="ru.geekbrains" >
 
     <application
         android:allowBackup="true"
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
-            android:name="ru.geekbrains.stargame.AndroidLauncher"
+            android:name="ru.geekbrains.AndroidLauncher"
             android:label="@string/app_name" 
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
