--- a/Java/JavaEE/Lesson1/src/main/webapp/WEB-INF/web.xml
+++ b/Java/JavaEE/Lesson1/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-  <!--<!DOCTYPE web-app PUBLIC-->
-  <!-- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"-->
-  <!-- "http://java.sun.com/dtd/web-app_2_3.dtd" >-->
-
-  <!--<web-app>-->
   <display-name>Archetype Created Web Application</display-name>
+
+  <error-page>
+    <error-code>404</error-code>
+    <location>/404.jsp</location>
+  </error-page>
+
+  <error-page>
+    <error-code>403</error-code>
+    <location>/403.jsp</location>
+  </error-page>
 </web-app>
