--- a/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/web.xml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,28 @@
          version="4.0">
   <display-name>Archetype Created Web Application</display-name>
 
+  <servlet>
+    <servlet-name>faces-servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>faces-servlet</servlet-name>
+    <url-pattern>*.xhtml</url-pattern>
+  </servlet-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>index.xhtml</welcome-file>
+  </welcome-file-list>
+
   <error-page>
     <error-code>404</error-code>
-    <location>/404.jsp</location>
+    <location>/404.xhtml</location>
   </error-page>
 
   <error-page>
     <error-code>403</error-code>
-    <location>/403.jsp</location>
+    <location>/403.xhtml</location>
   </error-page>
 </web-app>
