--- a/Java/JavaEE/webAppJSF/pom.xml
+++ b/Java/JavaEE/webAppJSF/pom.xml
@@ -20,6 +20,19 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.jboss.spec.javax.ejb</groupId>
+      <artifactId>jboss-ejb-api_3.2_spec</artifactId>
+      <version>1.0.2.Final</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
