--- a/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/web.xml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,23 @@
     <error-code>403</error-code>
     <location>/403.xhtml</location>
   </error-page>
+
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <realm-name>RealmUsersRoles</realm-name>
+    <form-login-config>
+      <form-login-page>/login.xhtml</form-login-page>
+      <form-error-page>/error.xhtml</form-error-page>
+    </form-login-config>
+  </login-config>
+
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Admin resource</web-resource-name>
+      <url-pattern>/admin/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>ADMIN</role-name>
+    </auth-constraint>
+  </security-constraint>
 </web-app>
