--- a/Java/network_storage/network_storage_step_1/server/pom.xml
+++ b/Java/network_storage/network_storage_step_1/server/pom.xml
@@ -12,6 +12,14 @@
     <artifactId>server</artifactId>
     
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.31.1</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.xokyopo</groupId>
             <artifactId>common</artifactId>
