--- a/Java/spring_intro/spring-intro/pom.xml
+++ b/Java/spring_intro/spring-intro/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-config-xmlonly</module>
         <module>spring-config-mixid</module>
         <module>spring-mvc</module>
+        <module>sprng-hibernate</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
