добавил начтроки для Хибернейта

--- a/Java/spring_intro/spring-intro/spring-mvc/src/main/resources/AppProperties.properties
+++ b/Java/spring_intro/spring-intro/spring-mvc/src/main/resources/AppProperties.properties
@@ -1,4 +1,17 @@
-datasource.driver=com.mysql.cj.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/chat_server_db?serverTimezone=UTC
-datasource.user=root
-datasource.password=root
+datasource.driver = com.mysql.cj.jdbc.Driver
+datasource.url = jdbc:mysql://localhost:3306/chat_server_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+datasource.user = root
+datasource.password = root
+#Указание диалекта конкретной базы данных
+hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#Указание максимальной глубины связи
+hibernate.max_fetch_depth = 3
+#Максимальное количество строк, возвращаемых за один запрос из БД
+hibernate.jdbc.fetch_size = 50
+#Максимальное количество запросов при использовании пакетных операций
+hibernate.jdbc.batch_size = 10
+#Включает логирование
+hibernate.show_sql = true
+hibernate.format_sql = true
+#Автоматически создает необходимые для работы сущьности
+hibernate.hbm2ddl.auto = update
