--- a/Java/spring_intro/spring-intro/spring-mvc/pom.xml
+++ b/Java/spring_intro/spring-intro/spring-mvc/pom.xml
@@ -49,11 +49,11 @@
             <version>2.3.3.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ch.qos.logback</groupId>-->
+<!--            <artifactId>logback-classic</artifactId>-->
+<!--            <version>1.2.3</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
