--- a/Java/spring_intro/spring-intro/pom.xml
+++ b/Java/spring_intro/spring-intro/pom.xml
@@ -20,6 +20,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>5.2.8.RELEASE</spring.version>
+        <encoding>UTF-8</encoding>
     </properties>
 
     <dependencies>
