--- a/Java/spring_intro/spring-intro/spring-mvc/pom.xml
+++ b/Java/spring_intro/spring-intro/spring-mvc/pom.xml
@@ -13,7 +13,6 @@
     <properties>
         <server.container>tomcat9x</server.container>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <encoding>UTF-8</encoding>
     </properties>
 
 
@@ -70,6 +69,7 @@
                     <configuration>
                         <properties>
                             <cargo.servlet.port>8080</cargo.servlet.port>
+                            <cargo.tomcat.uriencoding>UTF-8</cargo.tomcat.uriencoding>
 <!--                            <cargo.protocol>https</cargo.protocol>-->
                         </properties>
                     </configuration>
