исправил поддержку русских букв.

--- a/Java/spring_intro/spring-intro/spring-mvc/pom.xml
+++ b/Java/spring_intro/spring-intro/spring-mvc/pom.xml
@@ -65,14 +65,16 @@
                 <configuration>
                     <container>
                         <containerId>${server.container}</containerId>
+<!--                        при отключении параметра ниже получаем ошибку с русскими буквами.-->
+                        <type>embedded</type>
                     </container>
-                    <configuration>
-                        <properties>
-                            <cargo.servlet.port>8080</cargo.servlet.port>
-                            <cargo.tomcat.uriencoding>UTF-8</cargo.tomcat.uriencoding>
-<!--                            <cargo.protocol>https</cargo.protocol>-->
-                        </properties>
-                    </configuration>
+                        <configuration>
+                            <properties>
+                                <cargo.servlet.port>8080</cargo.servlet.port>
+                                <cargo.tomcat.uriencoding>UTF-8</cargo.tomcat.uriencoding>
+    <!--                            <cargo.protocol>https</cargo.protocol>-->
+                            </properties>
+                        </configuration>
                 </configuration>
             </plugin>
         </plugins>
