--- a/Java/spring_intro/spring-intro/pom.xml
+++ b/Java/spring_intro/spring-intro/pom.xml
@@ -13,7 +13,8 @@
         <module>spring-config-xmlonly</module>
         <module>spring-config-mixid</module>
         <module>spring-mvc</module>
-        <module>sprng-hibernate</module>
+        <module>spring-hibernate</module>
+        <module>spring-boot</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
