--- a/Java/spring_intro/spring-intro/spring-boot/src/main/resources/application.properties
+++ b/Java/spring_intro/spring-intro/spring-boot/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/chat_server_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+#\u0423\u043A\u0430\u0437\u0430\u043D\u0438\u0435 \u0434\u0438\u0430\u043B\u0435\u043A\u0442\u0430 \u043A\u043E\u043D\u043A\u0440\u0435\u0442\u043D\u043E\u0439 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445
+#spring.jpa.hibernate.ddl-auto=update
+#\u0412 \u0447\u0435\u043C \u0440\u0430\u0437\u043B\u0438\u0447\u0438\u0435 \u0434\u0430\u043D\u043D\u044B\u0445 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u043E\u0432?
+#\u0410\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438 \u0441\u043E\u0437\u0434\u0430\u0435\u0442 \u043D\u0435\u043E\u0431\u0445\u043E\u0434\u0438\u043C\u044B\u0435 \u0434\u043B\u044F \u0440\u0430\u0431\u043E\u0442\u044B \u0441\u0443\u0449\u043D\u043E\u0441\u0442\u0438
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#\u0412\u043A\u043B\u044E\u0447\u0430\u0435\u0442 \u043B\u043E\u0433\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#logging.level.root=info
+logging.level.org.hibernate.SQL=debug
