--- a/Java/spring_intro/spring-intro/spring-boot/src/main/resources/application.properties
+++ b/Java/spring_intro/spring-intro/spring-boot/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #logging.level.root=info
 logging.level.org.hibernate.SQL=debug
+#logging.level.org.springframework.security=DEBUG
